src/components/components.css
#UnitsPanel{
    grid-column: 1/span 1;
}
#KitPanel{
    grid-column: 2/span 1;
    padding: 1rem;
    position: relative;
}
#ArmyPanel{
    grid-column: 3/span 1;
    padding: 1rem;
    position: relative;
}

.panel{
    width:100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    border-left: 2px solid grey;
    overflow: auto;
}


.unitRect{
    width:100%;
    height: 3rem;
    border-top: 4px solid grey;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
    cursor: pointer;
}

.unitRect:hover{
    background-color: aquamarine;
}



.kitTitle{
    margin-top: 5rem;
    font-size: 5rem;
    text-align: center;
}

.weaponList{
    width: 100%;
    min-height: 5rem;
    margin-top: 2.5rem;
}

.listTitle{
    width:100%;
    border-bottom: 1px solid grey 
}


.ENLIST{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 3rem;
}

.deletionDisplay{
    padding: 0.2rem ;
    width:100%;
    display: grid;
    grid-template-columns: 1fr 2rem;
    grid-template-rows: 1fr;
}

.deleteDisplay{
    grid-row: 1/span 1;
    grid-column: 2/span 1;
    cursor: pointer;    
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.deleteDisplay:hover{
    color:red;
}

.ArmyFooter{
    width:100%;
    height: 5rem;
    position:absolute;
    bottom: 0rem ;
    padding:0 1rem;
    background-color: grey;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.impExp{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.emptyPanel{
    width:100%;
    height:100%;
    display:flex;
    justify-content: center;
    align-items: center;
}

.search{
    width:100%;
    height: 3rem;
    display: flex;
    align-items: center;
    padding: 1rem;
    position:sticky;
    top:0;
    background-color: white;
}

.equips{
    background-color: #333;
    color: white;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.deletionDisplay .details{
    grid-row: 1/span 1;
    grid-column: 1/span 1;
}

*{
    box-sizing: border-box;
}

